refactor(backend): - replace field injection with constructor injection for improved code reliability and maintainability